# ImageClassification

./: CMakeLists.txt  README.md  setup_tensorflow_env.bat
CNN_Image_Classifier/: CMakeLists.txt  CNN_Image_Classifier.py
Collect_Training_Images/: CMakeLists.txt  Collect_Training_Images.py
Models/: app.py  classifier.py  kerasClassifier.py  retrain.py
Models/classifierContainer/: Dockerfile  app.py  label_image.py  picture.npy  pictureSize.npy  textLabels.txt
Models/classifierContainer/trained_model/Model_1/retrain_logs/validation/: events.out.tfevents.1534864631.805f0b7d3442
Models/classifierContainer/trained_model/Model_2/bottleneck/bag/: bag_02.jpg_https~tfhub.dev~google~imagenet~inception_v3~feature_vector~1.txt  bag_04.jpg_https~tfhub.dev~google~imagenet~inception_v3~feature_vector~1.txt  bag_06.jpg_https~tfhub.dev~google~imagenet~inception_v3~feature_vector~1.txt  bag_07.jpg_https~tfhub.dev~google~imagenet~inception_v3~feature_vector~1.txt  bag_08.jpg_https~tfhub.dev~google~imagenet~inception_v3~feature_vector~1.txt  bag_09.jpg_https~tfhub.dev~google~imagenet~inception_v3~feature_vector~1.txt  bag_10.jpg_https~tfhub.dev~google~imagenet~inception_v3~feature_vector~1.txt  bag_100.jpg_https~tfhub.dev~google~imagenet~inception_v3~feature_vector~1.txt  (+39 more)
Models/retrainContainer/: Dockerfile  app.py  requirements.txt  retrain.py
Models/retrainContainer/Model_1/trained_model/: output_labels.txt
Models/retrainContainer/Model_2/trained_model/: output_labels.txt
RetrainCNN/: CMakeLists.txt  RetrainCNN.py
(+456 files in other folders)
